<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_person_24"
        android:color="@color/black"
        android:title="@string/bnm_Perfil"
        />
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_add_24"
        android:color="@color/black"
        android:title="@string/bnm_Reservas"
        />
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_calendar_24"
        android:color="@color/black"
        android:title="@string/bnm_MisActividades"
        />

</menu>