<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentPerfil">

    <TextView
        android:id="@+id/tv_Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/fp_nombre"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTF_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fp_nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:enabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Nombre"
        app:layout_constraintVertical_bias="0.023">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="61dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fp_apellidos"
        android:textSize="20sp"
        android:textStyle="bold"
        android:enabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTF_Nombre"
        app:layout_constraintVertical_bias="0.064" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTF_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fp_apellidos"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:enabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_apellidos"
        app:layout_constraintVertical_bias="0.022">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_fecha_entrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fp_fecha_de_entrada"
        android:textSize="20sp"
        android:textStyle="bold"
        android:enabled="false"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTF_apellidos"
        app:layout_constraintVertical_bias="0.035" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTF_fecha_entrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fp_fecha_de_entrada_hint"
        android:layout_marginTop="20dp"
        android:inputType="text|date"
        android:minHeight="48dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha_entrada"
        app:layout_constraintVertical_bias="0.022">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_fecha_salida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|date"
        android:minHeight="48dp"
        android:text="@string/fp_fecha_de_salida"
        android:enabled="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTF_fecha_entrada"
        app:layout_constraintVertical_bias="0.141" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTF_fecha_salida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fp_fecha_de_entrada_hint"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:enabled="false"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha_salida"
        app:layout_constraintVertical_bias="0.118">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTF_fecha_salida"
        app:layout_constraintVertical_bias="0.189" />


</androidx.constraintlayout.widget.ConstraintLayout>